# cuda-lab

2-Convolutions/src/: student_func.cu
3-Reduction/: CMakeLists.txt
3-Reduction/src/: Reduce.cu  main.cpp
sources/: Subject-Project-fr.md
